fix z-index to

--- a/app/assets/stylesheets/flat-ui/modules/input-groups.less
+++ b/app/assets/stylesheets/flat-ui/modules/input-groups.less
@@ -29,7 +29,7 @@
   border: 1px solid @gray-light;
   border-radius: @border-radius-large;
   .transition(~"border .25s linear, color .25s linear, background-color .25s linear");
-  
+
   .input-group-hg &,
   .input-group-lg &,
   .input-group-sm &, {
@@ -67,13 +67,14 @@
 
 // Button input groups
 // -------------------------
-.input-group-btn {    
+.input-group-btn {
   .btn {
     background-color: @inverse;
-    border: 2px solid @gray-light;    
+    border: 2px solid @gray-light;
     color: @gray-light;
     line-height: 18px;
-  } 
+    z-index: 2;
+  }
   .btn-default {
     .button-variant(@btn-default-color, @gray-light, @btn-hover-bg, @btn-active-bg);
   }
@@ -111,25 +112,25 @@
   .input-group-btn + .form-control,
   .input-group-btn:last-child .btn {
     .border-right-radius(20px);
-    
+
     .input-group-hg& {
       .border-right-radius(27px);
     }
     .input-group-lg& {
       .border-right-radius(25px);
     }
-  } 
+  }
   .form-control:first-child,
   .input-group-btn:first-child .btn {
     .border-left-radius(20px);
-    
+
     .input-group-hg& {
       .border-left-radius(27px);
     }
     .input-group-lg& {
       .border-left-radius(25px);
     }
-  } 
+  }
   // Remove left padding for .form-control after button
   .input-group-btn + .form-control {
     padding-left: 0;
